# actix-service

./: Cargo.toml  add_migration.sh  start_server.sh
migrations/: 0001_users_table.sql  202304211510_person_table.sql  202304211818_role_table.sql  202304211856_role_constraint.sql
src/: db.rs  main.rs
src/user/: mod.rs  user_controller.rs  user_model.rs  user_persistence.rs  user_service.rs
src/user/queries/: delete.sql  delete_roles.sql  insert_one.sql  insert_one_person.sql  insert_roles.sql  select_all.sql  select_by_id.sql  update.sql
