[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "chrono",
    "mysql",
] }
tokio = { version = "1.20.0", features = ["macros"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
